<resources>
    <string name="app_name">Hisanth Photography</string>
    <string name="ad_id">ca-app-pub-2373003321681741~7281773351</string>
    <string name="google_maps_key">AIzaSyAO-yZ3wHsZjTCyX9f-WXxYQzdftUGD95s</string>
    <string name="name">Name *</string>
    <string name="gpsAddress">Auto Address Capture</string>
    <string name="address">Address *</string>
    <string name="locality">Locality *</string>
    <string name="city">City *</string>
    <string name="pincode">PinCode *</string>
    <string name="mobile">Mobile Number *</string>
    <string name="mobile_country_code"><u><b>+91 - </b></u></string>
    <string name="email">Email ID *</string>
    <string name="services">Required Service *</string>
    <string name="date">Date Of Function *</string>
    <string name="delivery_mode">Mode Of Delivery *</string>
    <string name="package_type">Type of Package *</string>
    <string name="name_hint">Please Enter Your Name</string>
    <string name="address_hint">Please Enter Your Address</string>
    <string name="locality_hint">Please Enter Your Locality</string>
    <string name="city_hint">Please Select Your City</string>
    <string name="pincode_hint">Please Enter Your PinCode</string>
    <string name="mobile_hint">Please Enter Your Mobile Number</string>
    <string name="email_hint">Please Enter Your Email ID</string>
    <string name="services_hint">Please Select The Required Service</string>
    <string name="date_hint">Please Select the Date Of Function</string>
    <string name="delivery_mode_hint">Please Select the Mode Of Delivery</string>
    <string name="package_type_hint">Please Select the Type of Package</string>
    <string name="submit">Submit</string>
    <string name="reset">Reset Values</string>
    <string name="name_error">You did not enter the Name</string>
    <string name="address_error">You did not enter the Address</string>
    <string name="locality_error">You did not enter the Locality</string>
    <string name="city_error">You did not enter the City</string>
    <string name="pincode_error">You did not enter the PinCode</string>
    <string name="mobile_error">You did not enter the Mobile Number</string>
    <string name="email_error">You did not enter the Email ID</string>
    <string name="date_error">You did not enter the Function Date</string>
    <string name="end_date_error">You did not enter the Function End Date</string>
    <string name="mobile_validate_error">Please Enter a Valid Mobile Number</string>
    <string name="email_validate_error">Please Enter a Valid Email ID</string>
    <string name="price">Service Charge would be : </string>
    <string name="tax">Overall Tax would be : </string>
    <string name="discount">Overall Discount would be : </string>
    <string name="final_price">Overall Final Price would be : </string>
    <string name="mandatory_fields">The Fields which are marked with * are Mandatory Fields</string>
    <string name="alert_registration_submit_title">Hisanth Photography Price Details</string>
    <string name="alert_registration_submit_message">Please find the price details below</string>
    <string name="alert_registration_submit_positive_button">Submit with the Above Quote</string>
    <string name="alert_registration_module_name">registration</string>
    <string name="about_us1">Your Event will be Covered by a dedicated Photography and Videography team that understands the importance of a Wedding.</string>
    <string name="about_us2">Every event is treated as our own event and hence atmost care is given to every aspect of the event to make it very special and unique.</string>
    <string name="about_us3">We believe in referral clients and work to the utmost satisfaction of our client and their near and dear.</string>
    <string name="disclaimer1">Feel free to ask Customized package which match your budget from Customized Packages Tab. \n The final package price won\'t be negotiable. \n We believe that there is no discount in our hard work</string>
    <string name="disclaimer2">If you want demo videos, feel free to ask us and we will show you in our office. \n No Demo videos will be posted Online or in Application. \n We believe that customer privacy is very important</string>
    <string name="disclaimer3">We require 50% of the selected package cost and 100% of the travel cost (If applicable) to finalize the date. This advance is non-refundable because
        when we commit dates to you, we turn away other enquiries and lose potential business. Another 40% is required on the event day as 2nd advance and the balance 10% on delivery
        of albums and videos.</string>
    <string name="disclaimer4">Copyright and Usage \n We reserve the artist copyright of all images and reserve the right to use a selection to promote our own work on our website,
        in publications (online and offline) as well as social media. However, we will not be selling these images or using them for other commercial gain. You will have full usage rights
        on your wedding photos and can use them in any manner you see fit, as long as it is not for commercial gain.</string>
    <string name="general_help_heading"><u><b>General Queries</b></u></string>
    <string name="functions_help_heading"><u><b>Queries Specific To Functions</b></u></string>
    <string name="photography_help_heading"><u><b>Queries Specific To Photography Services</b></u></string>
    <string name="videography_help_heading"><u><b>Queries Specific To Videography Services</b></u></string>
    <string name="general_help1"><u><b>How to contact us ?</b></u> \n We can be contacted by Whatsapp, Facebook, Youtube, Google Maps, Email, SMS and Phone Call.  Please check the ways of contacting
        us in the "Contact Us" tab</string>
    <string name="general_help2"><u><b>Can I get any Discount in the services ?</b></u> \n The final package price won\'t be negotiable. \n We believe that there is no discount in our hard work</string>
    <string name="general_help3"><u><b>Can I customise My own Service packages ?</b></u> \n Feel free to ask Customized package which match your budget from Customized Packages Tab.</string>
    <string name="general_help4"><u><b>Is there a way to see demo videos / photos ?</b></u> \n If you want demo videos, feel free to ask us and we will show you in our office. \n No Demo videos will be posted Online or in Application. \n We believe that customer privacy is very important</string>
    <string name="general_help5"><u><b>Are you supporting with your services through Tamil Nadu ?</b></u> \n Currently we are have office in Madurai and Ramanathapuram.  But we support
    through out India on Demand.  Travel and Accommodation needs to be provided by you for the entire trip outside Madurai and Ramanathapuram.</string>
    <string name="general_help6"><u><b>How much days will it take to get my photos / videos from the event date ?</b></u> \n We will delivery your contents within a week from your event date.</string>
    <string name="general_help7"><u><b>How can I collect my Photos / Videos ?</b></u> \n While registration, you can either select Self Collection or Door Delivery from Mode of Delivery
    Drop down.  The price will vary based on the selection.  You can also change the mode after submission also.  The charges may vary based on the change.</string>
    <string name="general_help8"><u><b>Do you offer Photo Albums and Video Albums ?</b></u> \n Yes we offer Photo / video Albums free of cost or with a Minimal charge based on
    the package selected by you.</string>
    <string name="general_help9"><u><b>Do you print Visiting Cards, Wedding cards and other gift cards ?</b></u> \n As of now we are not doing this service.  But in future, we have a plan to
    start this service also.</string>
    <string name="general_help10"><u><b>Do you print Flex banners and other banners ?</b></u> \n As of now we are not doing this service.  But in future, we have a plan to
    start this service also.</string>
    <string name="general_help11"><u><b>What is Traditional Package ?</b></u> \n One Traditional Photographer \n One Traditional Videographer using Full HD Video Camera \n Professionally Edited Video final Full HD output in USB Pen drive \n
            300 selected photos in custom designed premium 36x12 inch Magazine Album made of Non-Tearing Synthetic sheets \n Rs. 50,000/-</string>
    <string name="general_help12"><u><b>What is Premium Package ?</b></u> \n Two Still Photographers - One Candid and One Traditional \n One Traditional Videographer using Full HD Video camera \n
                Professional Edited Video final Full HD output in USB Pen drive \n 60 selected post processed candid images in a 60 page 8x9 inch Designer Coffee Table Book \n
                400 selected photos in custom designed premium 36x12 inch Magazine Album made of Non-Tearing Synthetic Sheets \n 4 to 5 minute short, crisp, creative HD Video Story \n Rs. 75,000/-</string>
    <string name="photo_help1"><u><b>What is Aerial Photography ?</b></u> \n As soon as our flight takes off, we love to shoot the landscape or city scene below which gives us an advantage of taking a picture from above.
          So, images that are captured from above is known as aerial photography.  Drones are used for this purpose.</string>
    <string name="photo_help2"><u><b>What is Architectural photography ?</b></u> \n Capturing an interesting form, shape or colour of the structure can be visually appealing.  Therefore visuals of
        buildings that are interesting fall under this genre.  We can include interiors or exteriors of buildings and even an interesting element of the design.</string>
    <string name="photo_help3"><u><b>What is Candid photography / Wedding Photography ?</b></u> \n This is a very popular genre of photography.  Moments captured spontaneously as they happen is known ascandid photography.
          The subjects are usually not aware of the photographer, so they appear very relaxed.  Wedding photography is a perfect example of this style of photography.</string>
    <string name="photo_help10"><u><b>What is Conceptual / fine art photography ?</b></u> \n Images that tell a story come under this genre.  In terms of conceptual / fine art photography, we can
        create our own fiction with characters in made-up environment. </string>
    <string name="photo_help4"><u><b>What is Documentary photography ?</b></u> \n Manual pictures that form a photo story come under this style.  It is about a particular subject or a story that a photographer wants to highlight.
          They are all objective pictures and can be about a war, social issues, science and so on.</string>
    <string name="photo_help5"><u><b>What is Fashion photography ?</b></u> \n Typically used to sell something, this type of photography lures customers by glamorising the product.
          They are generally very creative and visually very interesting and can be taken in any location like a studio, an apartment, a rundown building or anywhere outdoors.</string>
    <string name="photo_help6"><u><b>What is Food photography ?</b></u> \n Whether we are sharing an image of food served at a restaurant or on our dinner table, almost everyone seems to be at
        it today.  This type of photography is used by restaurants, websites or bloggers to entice customers to try and sell their products.</string>
    <string name="event_date">Date Of Event *</string>
    <string name="event_date_hint">Please Select the Date Of Event</string>
    <string name="venue">Venue</string>
    <string name="venue_hint">Please Enter Venue Details</string>
</resources>