<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/LinearLayoutStyleVertical">

    <android.support.v7.widget.CardView style="@style/CardViewStyle">

        <LinearLayout style="@style/LinearLayoutStyleVertical">

            <LinearLayout style="@style/LinearLayoutStyleHorizontal">

                <TextView
                    style="@style/RegistrationTextViewStyle"
                    android:text="@string/disclaimer3" />

            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutStyleHorizontal">

                <TextView
                    style="@style/RegistrationTextViewStyle"
                    android:text="@string/disclaimer4" />

            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutStyleHorizontal">

                <TextView
                    style="@style/RegistrationTextViewStyle"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/price"
                    style="@style/RegistrationTextViewStyle" />

            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutStyleHorizontal">

                <TextView
                    style="@style/RegistrationTextViewStyle"
                    android:text="@string/tax" />

                <TextView
                    android:id="@+id/tax"
                    style="@style/RegistrationTextViewStyle" />

            </LinearLayout>


            <LinearLayout style="@style/LinearLayoutStyleHorizontal">

                <TextView
                    style="@style/RegistrationTextViewStyle"
                    android:text="@string/discount" />

                <TextView
                    android:id="@+id/discount"
                    style="@style/RegistrationTextViewStyle" />

            </LinearLayout>

            <LinearLayout style="@style/LinearLayoutStyleHorizontal">

                <TextView
                    style="@style/RegistrationTextViewStyle"
                    android:text="@string/final_price" />

                <TextView
                    android:id="@+id/final_price"
                    style="@style/RegistrationTextViewStyle" />

            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
