<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAboutUsFragment"
    android:orientation="vertical"
    android:scrollbars="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        app:cardCornerRadius="@dimen/cardviewProperty"
        app:cardElevation="@dimen/cardviewProperty">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@color/colorTabIndicatorColor"
            android:text="@string/about_us1" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        app:cardCornerRadius="@dimen/cardviewProperty"
        app:cardElevation="@dimen/cardviewProperty">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@color/colorTabIndicatorColor"
            android:text="@string/about_us2" />

    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/activity_margin"
        app:cardCornerRadius="@dimen/cardviewProperty"
        app:cardElevation="@dimen/cardviewProperty">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@color/colorTabIndicatorColor"
            android:text="@string/about_us3" />

    </android.support.v7.widget.CardView>
</LinearLayout>